force-app/main/default/objects/race__c/fields/Race_id__c.field-meta.xml
<CustomField>
    <fullName>Race_id__c</fullName>
    <externalId>true</externalId>
    <label>Race id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>