force-app/main/default/objects/race__c/fields/raceNameId__c.field-meta.xml
<CustomField>
    <fullName>raceNameId__c</fullName>
    <externalId>true</externalId>
    <label>raceNameId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>