force-app/main/default/objects/race__c/fields/round__c.field-meta.xml
<CustomField>
    <fullName>round__c</fullName>
    <label>Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>